--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="left"></div>
         <div class="right"></div>
         <div class="percent"><span id="percent"></span></div>
-        <div class="time"><span id="time"></span></div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
